# dataproc

./: .gitignore  analysis.py  autoscaling_dp15.yaml  autoscaling_dp20.yaml  dp_dpmetastore_autoscaling_dp15  dp_dpmetastore_autoscaling_dp20  hive-site(1.4).xml  hive-site(2.0).xml  pyproject.toml  pyspark-example.py  wordcount_v1.py  wordcount_v2.py
