[tool.poetry]
name = "dataproc"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyspark = "^3.3.1"


[tool.poetry.group.dev.dependencies]
pyspark = "^3.3.1"
nltk = "^3.8.1"
pandas = "^1.5.3"
flake8 = "^6.0.0"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
